--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 </head>
 <body>
     <div class="presentacion">
-        <h1>Curso de git</h1>
+        <div class="textos">
+            <h1>Curso de git</h1>
+            <h3>Apende Git de para y controla tus proyectos</h3>
+        </div>
     </div>
 </body>
 </html>
