--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
             <h1>Curso de git</h1>
             <h3>Apende Git de para y controla tus proyectos</h3>
         </div>
+        <div class="image">
+            <img src="img/git.png" alt="">
+        </div>
     </div>
 </body>
 </html>
