cambio de color git

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="presentacion">
         <div class="textos">
-            <h1>Curso de git</h1>
+            <h1>Curso de <span>git</span></h1>
             <h3>Apende Git de para y controla tus proyectos</h3>
         </div>
         <div class="image">
