pruba push con clone

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <div class="textos">
             <h1>Curso de <span>git</span></h1>
             <h3>Apende Git de para y controla tus proyectos</h3>
+            <h1>prueba de push-clone2</h1>
         </div>
         <div class="image">
             <img src="img/git.png" alt="">
